--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,20 @@
 /*  your css code here. If applicable */
+div{
+	background-color:#f5f5f5
+}
+.container{
+	padding:10px;
+	background-color:#f5f5f5;
+}
+h1{
+	padding:10px;
+	border:5px;
+	background-coloe:white;
+}
+.text{
+	
+}
+.author{
+	text-align:right;
+	font-style:italic;
+}
