--- a/styles.css
+++ b/styles.css
@@ -6,10 +6,10 @@ div{
 	padding:10px;
 	background-color:#f5f5f5;
 }
-h1{
+.testimonial{
 	padding:10px;
 	border:5px;
-	background-coloe:white;
+	background-color:white;
 }
 .text{
 	
